# chess-engine

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Evaluate.cpp  Evaluate.h  MagicBitboards.cpp  MagicBitboards.h  Main.cpp  MoveGenerator.cpp  README.md  Search.cpp  Search.h  TranspositionTable.cpp  TranspositionTable.h
engine/: Board.cpp  Board.h  BoardUtils.cpp  BoardUtils.h  Enums.h  Evaluate.cpp  Evaluate.h  MagicBitboardUtils.cpp  MagicBitboardUtils.h  MagicBitboards.cpp  Main.cpp  MoveUtils.cpp  MoveUtils.h  Moves.cpp  Moves.h  Search.cpp  Search.h  See.cpp  See.h  TranspositionTable.cpp  TranspositionTable.h  UCI.cpp  UCI.h
nnue/: loss.py  nnue.cpp  nnue.py  sparseBatch.py  train.cpp  train.h  train.py  trainDataLoader.cpp  trainDataLoader.h
src/: Board.cpp  Board.h  Evaluate.cpp  Evaluate.h  MagicBitboards.cpp  MagicBitboards.h  Main.cpp  Moves.cpp  Moves.h  Search.cpp  Search.h  TranspositionTable.cpp  TranspositionTable.h  UCI.cpp  UCI.h  script.py
training/: filter_quiet_positions.py  parse_matches.py  train.cpp
